# vocal

./: .gitignore  README.md  codes.py  dedup.py  exec.py  join.py  prompt.py  pyproject.toml  review.ipynb  run_scenarios.py  vocal.ipynb
