[project]
name = "ln-multivocal-review"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "tqdm",
    "xlrd",
    "dateparser",
    "pandas",
    "requests",
    "openpyxl",
    "scipy",
    "scikit-learn",
    "holoviews", 
    "bokeh", 
    "panel", 
    "pillow", 
    "wordcloud",
    "matplotlib",
    "ipykernel",
]
